--- a/style.css
+++ b/style.css
@@ -1,11 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Itim&family=Montserrat:wght@500&display=swap');
+
+:root {
+    --heading-color : rgb(255, 155, 4);
+    --bg-color : rgb(20, 20, 32);
+    --main-text-color : rgb(3, 3, 3);
+    --player1-color : rgb(9, 195, 114);
+    --player2-color : rgb(73, 138, 251);
+    --button-bg : rgb(240, 206, 112);
+    --highlight-gray : rgb(128, 128, 128);
+    --gameboard-bg-color : rgb(23, 30, 34);
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     position: relative;
+    font-family: 'Itim';
+    color: white;
 }
 
 body {
+    background-color: var(--bg-color);
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -15,8 +31,14 @@ body {
 
 .header {
     width: 100%;
-    height: 15%;
+    height: 10%;
     text-align: center;
+}
+
+.header h1 {
+    color: var(--heading-color);
+    font-size: 4rem;
+    font-family: 'Itim';
 }
 
 .mid {
@@ -27,38 +49,223 @@ body {
     align-items: center;
 }
 
+#opponent {
+    height: 37px;
+    font-size: 30px;
+}
+
+#turn {
+    visibility: hidden;
+    height: 55px;
+    font-size: 45px;
+}
+
+#turn #player1Turn {
+    color: var(--player1-color);
+    font-weight: bolder;
+}
+
+#turn #player2Turn {
+    color: var(--player2-color);
+    font-weight: bolder;
+}
+
 .main {
+    position: relative;
+    margin-top: 10px;
     width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
+    gap: 20px;
+}
+
+.main .player-info {
+    height: 100%;
+    width: 350px;
+    border-radius: 25px;
+    box-shadow: 0px 0px 5px 2px var(--highlight-gray);
+}
+
+.main .player-info .player-display-symbol {
+    visibility: hidden;
+    font-size: 100px;
+    width: 120px;
+    height: 100px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+}
+
+.player-display-symbol#player1DispSymb {
+    color: var(--player1-color);
+}
+
+.player-display-symbol#player2DispSymb {
+    color: var(--player2-color);
+}
+
+form .data-input {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.main .player-info form{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+form .data-input.player-name {
+    height: 40%;
+    width: 100%;
+    padding: 10px 50px;
+}
+
+form .data-input h3, form .data-input h3 {
+    font-size: 25px;
+}
+
+form input {
+    padding: 2px 10px;
+    width: 100%;
+    font-size: 25px;
+    border-radius: 20px;
+}
+
+form .data-input.player-symbol {
+    height: 60%;
+    width: 100%;
+    padding: 10px 50px;
+}
+
+.player-info form button.submit-player {
+    z-index: 1;
+    position: absolute;
+    top: 40%;
+}
+
+form input, form button {
+    color: var(--main-text-color);
+}
+
+form button.submit-player {
+    padding: 5px;
+    border-radius: 25px;
+    font-size: 20px;
+    background-color: var(--button-bg);
 }
 
 #startGame {
-    display: none;
     position: absolute;
     z-index: 1;
-    top: 50%;
+    top: 35%;
+    padding: 10px;
+    background-color: var(--button-bg);
+    color: var(--main-text-color);
+    font-size: 20px;
+    border-radius: 25px;
+}
+
+.game {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
 }
 
 .game-board {
-    display: none;
+    padding: 2px;
     width: 350px;
     height: 350px;
-    background-color: gray;
+    background-color: var(--gameboard-bg-color);
+    row-gap: 5px;
+    column-gap: 5px;
 }
 
 .board-cell {
-    border: 1px solid red;
+    border: 1px dashed var(--highlight-gray);
+}
+
+#resetButton {
+    visibility: hidden;
+    padding: 5px;
+    width: 150px;
+    font-size: 20px;
+    color: var(--main-text-color);
+    background-color: var(--button-bg);
+    border-radius: 25px;
+}
+
+#overlay {
+    display: none;
+    z-index: 2;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.8;
 }
 
 .modal {
+    background-color: var(--gameboard-bg-color);
     visibility: hidden;
+    position: fixed;
+    top: 25%;
+    z-index: 3;
+    height: 400px;
+    width: 90%;
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.modal h1#winner {
+    font-size: 4rem;
+    color: var(--heading-color);
+}
+
+.modal .choice-btns{
+    width: 25%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.modal .choice-btns button {
+    padding: 5px 10px;
+    border-radius: 25px;
+    color: var(--main-text-color);
+    background-color: var(--button-bg);
+    font-size: 2rem;
 }
 
 .footer {
     width: 100%;
     height: 10%;
-    text-align: center;
+    z-index: 3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer .credits a{
+    font-size: 1.3rem;
+    font-family: 'Montserrat', sans-serif;
+    text-decoration: none;
 }
