--- a/style.css
+++ b/style.css
@@ -31,13 +31,13 @@ body {
 
 .header {
     width: 100%;
-    height: 10%;
+    height: 15%;
     text-align: center;
 }
 
 .header h1 {
     color: var(--heading-color);
-    font-size: 4rem;
+    font-size: 4.5rem;
     font-family: 'Itim';
 }
 
@@ -222,7 +222,7 @@ form button.submit-player {
     background-color: var(--gameboard-bg-color);
     visibility: hidden;
     position: fixed;
-    top: 25%;
+    top: 30%;
     z-index: 3;
     height: 400px;
     width: 90%;
@@ -255,16 +255,17 @@ form button.submit-player {
 }
 
 .footer {
+    font-size: 1.3rem;
     width: 100%;
     height: 10%;
     z-index: 3;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
 .footer .credits a{
+    color: var(--heading-color);
     font-size: 1.3rem;
     font-family: 'Montserrat', sans-serif;
     text-decoration: none;
