added styling for board cell

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
 }
 
 .header h1 {
+    z-index: 3;
     color: var(--heading-color);
     font-size: 4.5rem;
     font-family: 'Itim';
@@ -193,6 +194,8 @@ form button.submit-player {
 }
 
 .board-cell {
+    font-size: 5rem;
+    text-align: center;
     border: 1px dashed var(--highlight-gray);
 }
 
